<resources>
    <string name="app_name">ServerNotepad</string>
    <string name="createDtemp">createdtemp</string>
    <string name="tagstemp">tags Temp</string>
    <string name="updatetemp">Update Temp</string>
    <string name="titletemp">Title temp</string>
    <string name="new_note">New Note</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="delete_note">Delete Note</string>
    <string name="edit_return">Return to List</string>
    <string name="edit_delete_note">Delete Note</string>
    <string name="filename">Temp Filename</string>
</resources>
