<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/titletemp" />

            <TextView
                android:id="@+id/update_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/updatetemp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tags_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/tagstemp" />

            <TextView
                android:id="@+id/createdate_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/createDtemp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/content_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filename"
                android:visibility="invisible" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>